Make sure row numbers stay vertically aligned
Just looks tidier.

--- a/app/assets/stylesheets/components/table.scss
+++ b/app/assets/stylesheets/components/table.scss
@@ -74,6 +74,12 @@
 
   }
 
+  &-invisible-error {
+    border-left: 5px solid transparent;
+    padding-left: 7px;
+    display: block;
+  }
+
   &-status {
 
     &-default {
